@@ -1,3 +1,5 @@
+  * Repaired bug in BigInt::isqrt
+
 bobcat (2.19.00)
 
   * The 'BigInt' man-page was adapted to match the actual member and function
